# azure-function

./: .gitignore  AGENTS.md  DEVELOPMENT.md  Makefile  README.md  azuredeploy.json  azuredeploy.parameters.json  function_app.py  pyproject.toml  requirements.txt
docudevs_function/: __init__.py  azure_storage.py  bootstrap.py  configuration.py  processor.py
samples/: params.json  schema.json
tests/: test_configuration_store.py  test_document_processor.py
